--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8"/>
-  <title>React frontend</title>
+  <title>Etheroscope</title>
 </head>
 <body>
   <div id='app'></div>
