--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8"/>
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <title>Etheroscope</title>
 </head>
 <body>
